# zed-terminal

./: .gitignore  Cargo.toml
.cargo/: config.toml
.claude/: settings.json
.claude/agents/cortex/agents/cortex-gpui-specialist/: agent.md  manifest.json
.claude/agents/cortex/agents/cortex-ssh-remote-specialist/: agent.md  manifest.json
.claude/agents/cortex/agents/cortex-terminal-specialist/: agent.md  manifest.json
.claude/agents/cortex/agents/cortex-workspace-specialist/: agent.md  manifest.json
.claude/agents/cortex/agents/cortex-zed-terminal-dev/: agent.md  manifest.json
.claude/rules/cortex/: project-context.md
.claude/skills/: build-check.md  gpui-patterns.md  new-panel-crate.md  strip-crate.md
.zed/: settings.json
assets/keymaps/: default-linux.json  default-macos.json  default-windows.json
assets/settings/: default.json
crates/analytics_panel/: Cargo.toml
crates/analytics_panel/src/: analytics_panel.rs
crates/file_finder/src/: file_finder.rs  file_finder_tests.rs
crates/git_ui/: Cargo.toml
crates/git_ui/src/: conflict_view.rs  git_panel.rs  project_diff.rs
crates/gpui/src/: window.rs
crates/gpui/src/text_system/: line.rs
crates/language_tools/: Cargo.toml
crates/language_tools/src/: lsp_log_view.rs
crates/notifications/: Cargo.toml
crates/ports_panel/: Cargo.toml
crates/ports_panel/src/: ports_panel.rs
crates/project/src/: lsp_store.rs
crates/release_channel/src/: lib.rs
crates/remote/src/: protocol.rs  transport.rs
crates/remote/src/transport/: ssh.rs
crates/remote_server/src/: server.rs
crates/settings_ui/: Cargo.toml
crates/settings_ui/src/: page_data.rs  pages.rs
crates/settings_ui/src/components/: ollama_model_picker.rs
crates/sidebar/: Cargo.toml
crates/sidebar/src/: sidebar.rs
crates/ssh_panel/: Cargo.toml
crates/ssh_panel/src/: ssh_panel.rs
crates/terminal/src/: terminal.rs
crates/terminal_view/src/: terminal_element.rs  terminal_panel.rs  terminal_view.rs
crates/title_bar/src/: collab.rs  title_bar.rs
crates/ui/src/: components.rs
crates/webview_panel/: Cargo.toml
crates/webview_panel/src/: analytics_dashboard.rs  manifest.rs  theme_bridge.rs  webview_panel.rs
crates/webview_runtime/: Cargo.toml
crates/webview_runtime/src/: ipc.rs  permission.rs  platform_windows.rs  webview_runtime.rs
crates/workspace/src/: welcome.rs
crates/zed/: Cargo.toml
crates/zed/src/: main.rs  zed.rs
crates/zed/src/zed/: app_menus.rs  edit_prediction_registry.rs  git_status_indicator.rs  open_listener.rs  quick_action_bar.rs
crates/zed/src/zed/quick_action_bar/: repl_menu.rs
docs/superpowers/plans/: 2026-03-24-phase1-strip-and-optimize.md  2026-03-26-analytics-panel-webview.md  2026-03-26-project-templates-panel.md  2026-03-26-system-monitor-panel.md  2026-03-30-collab-removal.md
docs/superpowers/specs/: 2026-03-24-zed-terminal-design.md  2026-03-26-project-template-panel-design.md  2026-03-26-system-monitor-panel-design.md  2026-03-30-collab-removal-design.md
