[package]
name = "analytics_panel"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
name = "analytics_panel"
path = "src/analytics_panel.rs"

[dependencies]
anyhow.workspace = true
chrono = { workspace = true, features = ["serde"] }
dirs.workspace = true
gpui.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
ui.workspace = true
workspace.workspace = true
