[package]
name = "ports_panel"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
name = "ports_panel"
path = "src/ports_panel.rs"

[dependencies]
anyhow.workspace = true
collections.workspace = true
paths.workspace = true
serde_json.workspace = true
gpui.workspace = true
log.workspace = true
parking_lot.workspace = true
settings_content.workspace = true
smol.workspace = true
ssh_panel.workspace = true
ui.workspace = true
util.workspace = true
workspace.workspace = true
settings.workspace = true
serde.workspace = true
