[package]
name = "webview_runtime"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
name = "webview_runtime"
path = "src/webview_runtime.rs"

[dependencies]
anyhow.workspace = true
async-channel.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
wry.workspace = true
windows.workspace = true
